--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!----------------------- Viewport meta tag ----------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!----------------------- Gridlex ----------------------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
+
+
+    <!----------------------- My own custom stylesheet ----------------------->
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>{{page.title}}</title>
+
+    <!----------------------- The title for SEO & browser tabs ----------------------->
+    <title> {{ page.title }} </title>
+
 </head>
 
 <body>
-    {{content}}
-</body>
 
+    <header>
+        <a href="/index.html"> 
+            <h1>This is our header</h1> </a>
+    </header>
+
+    {{content}}
+
+    <footer>
+        <h2> This is our footer </h2>
+    </footer>
+
+</body>
 </html>
