--- a/style.css
+++ b/style.css
@@ -1,5 +1,172 @@
+/*-------------- CSS reset  --------------*/
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+ 
+img { max-width: 100%; height: auto; }
+
+/* Override default gridlex padding -----*/ 
+[class*=col] { padding: 0; }
+[class*=grid] { margin: 0; }
+
+section { position: relative; }
+
+/*-------------- Utility classes --------------*/
+.capped-width-wide      { max-width: 1600px; margin: auto; }
+.capped-width           { max-width: 1200px; margin: auto; }
+.capped-width-narrow    { max-width: 1000px; margin: auto; }
+.capped-width-v-narrow  { max-width: 800px;  margin: auto; }
+
+.tall-100 { min-height: 100vh; }
+.tall-90  { min-height: 90vh;  }
+.tall-80  { min-height: 80vh;  }
+.tall-70  { min-height: 70vh;  }
+.tall-60  { min-height: 60vh;  }
+.tall-50  { min-height: 50vh;  }
+
+/* Padding utility classes -----*/ 
+.padded-sm { padding: 2.5%; }
+.padded-md { padding: 5%;   }
+.padded-lg { padding: 10%;  }
+
+.padded-05 { padding: 0.5rem; }
+.padded-1 { padding: 1rem;    }
+.padded-2 { padding: 2rem;    }
+
+.padded-t { padding-top: 5%;    }
+.padded-b { padding-bottom: 5%; }
+.padded-l { padding-left: 5%;   }
+.padded-r { padding-right: 5%;  }
+
+.padded-tb { padding-top: 5%; padding-bottom: 5%; }
+.padded-lr { padding-left: 5%; padding-right: 5%; }
+
+.padded-t-1 { padding-top: 1rem;    }
+.padded-b-1 { padding-bottom: 1rem; }
+.padded-l-1 { padding-left: 1rem;   }
+.padded-r-1 { padding-right: 1rem;  }
+
+.padded-t-2 { padding-top: 2rem;    }
+.padded-b-2 { padding-bottom: 2rem; }
+.padded-l-2 { padding-left: 2rem;   }
+.padded-r-2 { padding-right: 2rem;  }
+
+.padded-t-0 { padding-top: 0;    }
+.padded-b-0 { padding-bottom: 0; }
+.padded-l-0 { padding-left: 0;   }
+.padded-r-0 { padding-right: 0;  }
+
+/* Margin utility classes -----*/ 
+.margin-t { margin-top: 5%;    }
+.margin-b { margin-bottom: 5%; }
+.margin-l { margin-left: 5%;   }
+.margin-r { margin-right: 5%;  }
+
+.margin-t-1 { margin-top: 1rem;    }
+.margin-b-1 { margin-bottom: 1rem; }
+.margin-l-1 { margin-left: 1rem;   }
+.margin-r-1 { margin-right: 1rem;  }
+
+.margin-t-2 { margin-top: 2rem;    }
+.margin-b-2 { margin-bottom: 2rem; }
+.margin-l-2 { margin-left: 2rem;   }
+.margin-r-2 { margin-right: 2rem;  }
+
+.margin-t-0 { margin-top: 0;    }
+.margin-b-0 { margin-bottom: 0; }
+.margin-l-0 { margin-left: 0;   }
+.margin-r-0 { margin-right: 0;  }
+
+.margin-tb { margin-top: 5%; margin-bottom: 5%; }
+.margin-lr { margin-left: 5%; margin-right: 5%; }
+
+/*-------------- Header and footer --------------*/
+header, 
+footer, 
+section {
+    padding: 5%;
+    border: 1px solid lightgray;
+}
+
+/*-------------- Background images --------------*/
+.bg-image {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: lightcyan;  /* Set a fall-back color while images are loading -----*/ 
+}
+
+/*-------------- Aspect ratios --------------*/
+/*Aspect ratios with percentage unit are only effective if the element (the <div>) is inside a parent container or column, it can't be applied to the column itself. -----*/
+.landscape     { padding-bottom: 66% ; }
+.portrait-tall { padding-bottom: 175%; }
+.portrait      { padding-bottom: 125%; }
+.square        { padding-bottom: 100%; }
+
+/*Background position -----*/
+.bg-pos-t { background-position: top;    }
+.bg-pos-b { background-position: bottom; }
+.bg-pos-l { background-position: left;   }
+.bg-pos-r { background-position: right;  }
+
+/*-------------- Typography styles --------------*/
+.left         { text-align: left;               }
+.right        { text-align: right;              }
+.center       { text-align: center;             }
+.uppercase    { text-transform: uppercase;      }
+
+h2, h3, h4, h5, h6 {
+  line-height: 1.1;
+  margin-bottom: 1.2rem;
+}
+
+h2 { font-size: 2rem;   }
+h3 { font-size: 1.8rem; }
+h4 { font-size: 1.6rem; }
+h5 { font-size: 1.4rem; }
+h6 { font-size: 1.2rem; }
+
+p, li {
+  line-height: 1.4; 
+  margin-bottom: 1rem;
+  font-family: ;
+  font-weight: 200;
+  font-size: 1rem;
+}
+
+h2:last-child, 
+h3:last-child, 
+h4:last-child, 
+h5:last-child, 
+h6:last-child, 
+p:last-child {
+	margin-bottom: 0;
+}
+
+/*-------------- Buttons and links --------------*/
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover { 
+  color: lightslategray; 
+}
+
+/*-------------- Intro section --------------*/
+.intro {
+    text-transform: uppercase;
+    background-color: lightgrey;
+}
+
+/*-------------- Categories styles --------------*/
+.tag {
+    border: 1px solid;
+    padding: 0.3rem;
+    display: inline-block;
+    margin-top: 1rem;
+    border-radius: 3px;
 }
